fix(kafka): add dto.event to trusted packages for Kafka deserialization